Make test code Java8 compliant again.
Replaces List.of with Arrays.asList